--- a/networkpolicy.yaml
+++ b/networkpolicy.yaml
@@ -1,1 +1,18 @@
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: nuage-app-policy
+spec:
+  podSelector:
+    matchLabels:
+      app: nuage-app
+  policyTypes:
+  - Ingress
+  ingress:
+  - from:
+    - ipBlock:
+        cidr: 192.168.1.0/24
+    ports:
+    - protocol: TCP
+      port: 80
 
